--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
+
 /* This is used to set up overall h1 heading styles in your webpage */
 h1 {
-    color:white;
+    /* color:white; */
+    /* fonst-size:10vw; */
     font-family: Courier, monospace;
 }
 h3 {
-    color:dark white;
+    /* color:white; */
+    /* font-size:3vw; */
     font-family: Courier, monospace;
 }
 /* Style the font family for the whole page like this */
@@ -33,16 +36,22 @@ of a CLASS*/
 } 
 /* How to Define Your DIV stuff */
 #div1 {
-    border: 3px solid white;
-    font: bold;
+    border: 2px solid white;
     margin: 10px auto 0 auto;
+    /* font-size:2vw; */
+    /* Padding is used to give space between the text and the border */
     padding: 20px;
     width:400px;
     text-align: center;
 }
-#div2 {
-    border: 2px solid red;
-    width: 300px;
+.div2 {
+    border: 2px solid white;
+    /* margin: 8px auto 0 auto; */
+    /* font-size:2vw; */
+    /* Padding is used to give space between the text and the border */
+    padding: 20px;  
+    width:350px;
+    text-align: center;
 }
 
 /* This sets up the SPAN class */
@@ -50,8 +59,9 @@ of a CLASS*/
     border: 2px solid white;
 }
 .my-div{
-    border: 2px solid white;
-    font: bold;
+    border: 3px solid white;
+    /* font-size:2vw; */
+    /* Margin is used to centre the DIV section on the page */
     margin: 10px auto 0 auto ;
     width:400px;
     text-align: center;
@@ -60,12 +70,22 @@ of a CLASS*/
 whether or not the screen size goes up to 600pixels */
 @media only screen and (max-width: 600px){
     body {
-        background-color:pink;
+        background-color:white;
     }
     /* This changes how a particular div section looks */
     #div1 {
+        border: 2px solid grey;
         background-color:white;
-        color: black;
+        /* font-weight: bold; */
+        color: grey;
+    }
+    .my-div{
+        border: 3px solid grey;
+        color:grey;
+        font-weight: bold; 
+        margin: 10px auto 0 auto ;
+        width:400px;
+        text-align: center;
     }
 }
 /*  This text will change your background colour dependent on 
